<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>org.avarc</groupId>
    <artifactId>avarc-server</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>24</java.version>

        <spring-boot.version>3.4.5</spring-boot.version>
        <spring-modulith.version>1.4.0-RC1</spring-modulith.version>
        <jjwt.version>0.12.6</jjwt.version>
        <springdoc-openapi.version>2.8.6</springdoc-openapi.version>
        <com-h2database.version>2.3.232</com-h2database.version>
        <org-postgresql.version>42.7.5</org-postgresql.version>
        <org-mapstruct.version>1.6.3</org-mapstruct.version>
        <postgis.version>2.5.1</postgis.version>
        <frontend-maven-plugin.version>1.15.1</frontend-maven-plugin.version>
        <node.version>22.14.0</node.version>
        <npm.version>10.8.1</npm.version>

        <exec-maven-plugin.version>3.5.0</exec-maven-plugin.version>
        <git-commit-id-maven-plugin.version>9.0.1</git-commit-id-maven-plugin.version>
        <plantuml-maven-plugin.version>0.2.13</plantuml-maven-plugin.version>
        <springdoc-openapi-maven-plugin.version>1.5</springdoc-openapi-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${com-h2database.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${org-postgresql.version}</version>
                <scope>runtime</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>avarc-backend</module>
        <module>avarc-frontend</module>
        <module>avarc-nginx</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-help-plugin</artifactId>
                <executions>
                    <execution>
                        <id>effective-pom</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>effective-pom</goal>
                        </goals>
                        <configuration>
                            <verbose>true</verbose>
                            <output>${project.build.directory}/effective-pom.xml</output>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>dependency-list</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>list</goal>
                        </goals>
                        <configuration>
                            <sort>true</sort>
                            <outputFile>${project.build.directory}/dependencies-list.txt</outputFile>
                        </configuration>
                    </execution>
                    <execution>
                        <id>dependency-tree</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>tree</goal>
                        </goals>
                        <configuration>
                            <outputFile>${project.build.directory}/dependencies-tree.txt</outputFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <version>${git-commit-id-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>initialize</phase>
                    </execution>
                </executions>
                <configuration>
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
                    <commitIdGenerationMode>full</commitIdGenerationMode>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <finalName>${project.name}</finalName>
                    <descriptors>
                        <descriptor>src/assembly/module-zip.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make-source-archive-for-upload</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <repositories>
        <repository>
            <id>spring-milestone</id>
            <name>Spring Milestone Repository</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
    </repositories>
</project>
